# task-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: blackboard.md  brains.md  handoff.md  index.md  logging.md  prompts.md  service.md  session.md  tracing.md  types.md
src/task_agent/: __init__.py  __main__.py  blackboard.py  brains.py  chat.py  env.py  handoff.py  logging_config.py  prompts.py  service.py  session.py  tracing.py  types.py
tests/: test_config_and_handoff.py  test_model_brains.py  test_session.py  test_tracing.py
