[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task-agent"
version = "0.1.0"
description = "Standalone blackboard-centered dual-agent task orchestration service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.76.0",
    "langfuse>=4.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
